--- a/basic-app/styles.css
+++ b/basic-app/styles.css
@@ -4,6 +4,7 @@
   box-sizing: border-box;
   font-family: Arial, sans-serif;
 }
+
 body {
   display: flex;
   justify-content: center;
@@ -11,6 +12,7 @@ body {
   height: 100vh;
   background-color: #f8f8f8;
 }
+
 .container {
   background: #f4c43b;
   width: 80%;
@@ -23,6 +25,7 @@ body {
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
   position: relative;
 }
+
 .card {
   background: white;
   width: 250px;
@@ -32,12 +35,14 @@ body {
   padding: 15px;
   text-align: left;
 }
+
 .card img {
   width: 100%;
   border-radius: 5px;
 }
+
 .tag {
-  background: #ffcc00;
+  background: #fc0;
   color: black;
   font-size: 12px;
   padding: 3px 8px;
@@ -45,28 +50,32 @@ body {
   display: inline-block;
   margin-top: 10px;
 }
+
 .card h3 {
   font-size: 18px;
   margin-top: 8px;
   color: #333;
 }
+
 .card p {
   font-size: 14px;
   color: #666;
   margin-top: 5px;
 }
+
 .author {
   display: flex;
   align-items: center;
   margin-top: 10px;
 }
+
 .author img {
   width: 30px;
   height: 30px;
   border-radius: 50%;
   margin-right: 10px;
-
 }
+
 .author span {
   font-size: 14px;
   color: #333;
